# FashionTrend

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ENV_NOTES.md  LICENSE  LICENSE_FR.MD  README.md  environment.yml  pyproject.toml  requirements-full.txt  requirements.txt  scan_secrets.py  secrets_report.md
.github/workflows/: ci.yml
docs/: INFO.docx  INFO1.docx  Nkakou_Lina_2_presentation_102025.pptx  ProjetI.docx  Support+de+présentation+ModeTrends.pptx  workflow.md  ~$rojetI.docx
notebooks/: 00_exploration.ipynb  10_preprocessing.ipynb  20_training.ipynb  99_report.ipynb  FashionTrend.ipynb  Nkakou_Lina_1_notebook_102025.ipynb  TestFonction.ipynb  requirements.txt
notebooks/.ipynb_checkpoints/: JupytLina-checkpoint.ipynb  NotebLina-checkpoint.ipynb  TestFonction-checkpoint.ipynb  resume_secret-checkpoint.py  secrets_report-checkpoint.md
notebooks/.virtual_documents/: FashionTrend.ipynb  JupytLina.ipynb  NotebLina.ipynb  TestFonction.ipynb
scripts/: test_hf_token.py
