[project]
name = "FashionTrend"
version = "0.1.0"
description = "un projet IA Python/Jupyter qui vise à développer un système automatisé d'analyse des tendances vestimentaires sur les réseaux sociaux"
authors = [
    {name = "lina NKAKOU"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "huggingface-hub (>=0.34.5,<0.35.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
ruff = "^0.13.0"
black = "^25.1.0"
pre-commit = "^4.3.0"
nbstripout = "^0.8.1"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
debugpy = "^1.8.17"
jupyterlab = "^4.4.7"


[tool.black]
line-length = 100
target-version = ["py313"]
# Utilise une chaîne (regex). Les triples quotes TOML sont OK.
exclude = '''
/(
  \.git
 | \.venv
 | venv
 | env
 | data
 | outputs
 | models
)/
'''


[tool.ruff]
target-version = "py313"
line-length = 100
exclude = ["data", "outputs", "models", ".venv", "venv", "env", ".git"]

[tool.ruff.lint]
extend-select = ["E", "F", "I", "B", "UP"]
extend-ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"notebooks/**/*.ipynb" = ["E501", "E999"]

[tool.ruff.format]
quote-style = "preserve"


[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --maxfail=1"
testpaths = ["tests"]
